added a new profile picture

--- a/style/root.css
+++ b/style/root.css
@@ -21,7 +21,7 @@ body {
   -webkit-border-radius: 75%;
   border-radius: 75%;
   box-shadow: 0 0 0 1px #eee;
-  background: url("../images/mdu2.jpg");
+  background: url("../images/mdu.jpg");
   background-size: cover;
   margin: auto;
   align-content: center;
