--- a/style/root.css
+++ b/style/root.css
@@ -1,14 +1,25 @@
 body {
+  background-color: #242b4e;
+}
+
+.background-img {
+  margin-top: 50px;
   background-color: #f4f2fe;
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 60vh;
+  background-attachment: fixed;
+  background-position: center;
   position: relative;
+  min-height: 60vh;
+  border-radius: 6px;
+  box-shadow: 7px 10px 7px rgba(0, 0, 0, 0.9);
 }
 
 @media (max-width: 768px) {
-  body {
-    min-height: 30vh;
+  .background-img {
+    border-radius: 60px;
+    border: 5px solid white;
+    min-height: 60vh;
   }
 }
 
@@ -73,12 +84,6 @@ body {
   opacity: 1;
 }
 
-:root {
-  --primary-color: #6c63ff;
-  --secondary-color: #f5f2fe;
-  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-
 h1 {
   font-size: 4rem;
 }
@@ -88,128 +93,281 @@ h3 {
   font-size: 24px;
   text-align: center;
   opacity: 0.7;
+  margin: 20px;
 }
 
 .info-links {
   display: flex;
   justify-content: center;
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 35px;
 }
 
 .middle-contant {
-  color: #e0ad47;
+  color: hsl(40, 83%, 54%);
   text-align: center;
   margin-top: 15px;
   text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.7);
 }
 
 .about-link {
-  outline: 1px solid var(--secondary-color);
-  outline-offset: 0.2rem;
+  position: relative;
+  background: #fff;
+  color: #fff;
+  font-size: 18px;
   text-decoration: none;
-  color: var(--secondary-color);
-  margin: 5px 20px 0 20px;
-  border-radius: 16px;
-  border: 1px solid white;
-  padding: 20px 25px;
-  text-decoration: none;
-  text-transform: capitalize;
-  background-color: var(--primary-color);
-  box-shadow: var(--box-shadow);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-weight: 400;
+  padding: 25px 30px;
+  transition: 0.5s;
+  margin-right: 100px;
 }
 
 .about-link:hover {
+  background: var(--clr);
+  color: var(--clr);
   text-decoration: none;
-  color: #fd1392;
-  cursor: pointer;
-  background-color: white;
-  outline: 1px solid #fd1392;
-  border: 1px solid #fd1392;
-  outline-offset: 0.2rem;
-  transition: 2ms ease-in-out;
+  letter-spacing: 0.25em;
+  box-shadow: 0 0 35px var(--clr);
+}
+
+.about-link::before {
+  content: "";
+  text-decoration: none;
+  position: absolute;
+  background: #27282c;
+  inset: 2px;
+  z-index: 1;
+}
+
+.about-link span {
+  position: relative;
+  z-index: 1;
+}
+
+.about-link i::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 80%;
+  width: 10px;
+  height: 4px;
+  background: #27282c;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.about-link:hover i::before {
+  width: 20px;
+  left: 20%;
+}
+
+.about-link i::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 10px;
+  height: 4px;
+  background: #27282c;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.about-link:hover i::after {
+  width: 20px;
+  left: 80%;
 }
 
 .contact-link {
-  outline: 1px solid white;
-  outline-offset: 0.2rem;
-  color: white;
-  margin: 5px 20px 0 20px;
-  border-radius: 16px;
-  border: 1px solid white;
-  padding: 20px 20px;
-  background-color: #e0ad47;
+  position: relative;
+  background: #fff;
+  color: #fff;
+  font-size: 18px;
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-weight: 400;
+  padding: 25px 30px;
+  transition: 0.5s;
+  margin-right: -10px;
 }
 
 .contact-link:hover {
+  background: var(--clr);
+  color: var(--clr);
   text-decoration: none;
-  color: white;
-  cursor: pointer;
-  background-color: blue;
-  outline: 1px solid white;
-  border: 1px solid white;
-  outline-offset: 0.2rem;
-  transition: 2ms ease-in-out;
+  letter-spacing: 0.25em;
+  box-shadow: 0 0 35px var(--clr);
+}
+
+.contact-link::before {
+  content: "";
+  text-decoration: none;
+  position: absolute;
+  background: #27282c;
+  inset: 2px;
+  z-index: 1;
+}
+
+.contact-link span {
+  position: relative;
+  z-index: 1;
+}
+
+.contact-link i::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 80%;
+  width: 10px;
+  height: 4px;
+  background: #27282c;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.contact-link:hover i::before {
+  width: 20px;
+  left: 20%;
+}
+
+.contact-link i::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 10px;
+  height: 4px;
+  background: #27282c;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.contact-link:hover i::after {
+  width: 20px;
+  left: 80%;
 }
 
 p {
-  display: block;
-  margin: 0 auto;
+  position: relative;
   color: white;
-  height: 43vh;
-  width: 500px;
-  padding: 50px;
+  height: 55vh;
+  width: 500px auto;
+  padding: 40px;
+  margin: -20px 100px;
   border-radius: 30px;
   background-color: white;
+  box-shadow: 7px 10px 7px rgba(0, 0, 0, 0.9);
 }
 
 .wrap-gradient {
-  border: 1px solid white;
-  margin-top: -330px;
-  border-radius: 6px;
+  display: block;
+  margin-top: -415px;
   opacity: 0.9;
+}
+
+@media (max-width: 990px) {
+  .wrap-gradient {
+    margin: 30px;
+  }
 }
 
 .gradient {
   background-color: #e03c31;
   padding: 10px;
+  font-size: 25px;
+}
+
+.fa-linkedin {
+  color: white;
+}
+@media (max-width: 990px) {
+  .fa-linkedin,
+  .fa-x-twitter,
+  .fa-instagram,
+  .fa-facebook,
+  .fa-square-whatsapp,
+  .fa-envelope {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 990px) {
+  .gradient,
+  .gradient-1,
+  .gradient-2,
+  .gradient-3,
+  .gradient-4,
+  .gradient-5 {
+    margin: 10px;
+    border-radius: 60px;
+  }
 }
 
 .gradient-1 {
   background-color: #ffffff;
   padding: 10px;
+  font-size: 25px;
+}
+
+.fa-x-twitter {
+  color: black;
 }
 
 .gradient-2 {
   background-color: #007749;
   padding: 10px;
+  font-size: 25px;
+}
+
+.fa-instagram {
+  color: white;
 }
 
 .gradient-3 {
   background-color: #001489;
   padding: 10px;
+  font-size: 25px;
+}
+
+.fa-facebook {
+  color: white;
 }
 
 .gradient-4 {
   background-color: #ffb81c;
   padding: 10px;
+  font-size: 25px;
+}
+
+.fa-square-whatsapp {
+  color: green;
 }
 
 .gradient-5 {
   background-color: #000000;
   padding: 10px;
+  font-size: 25px;
+}
+
+.fa-envelope {
+  color: #0652a9;
 }
 
 footer {
+  color: #f4f2fe;
   font-size: 13px;
   font-weight: bold;
-  margin-top: 95px;
+  margin-top: 80px;
   padding: 0 10px;
 }
 
 .footer-link {
-  color: #001489;
+  color: #f4f2fe;
+  text-decoration: underline;
 }
 
 .footer-link:hover {
