--- a/style/about.css
+++ b/style/about.css
@@ -1,17 +1,91 @@
+body {
+  background-color: #242b4e;
+  color: white;
+}
+
 :root {
-  --primary-color: #6c63ff;
+  --primary-color: #f5f1fe;
   --secondary-color: #f5f2fe;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .home-link {
-  text-align: center;
-  display: block;
-  color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  position: relative;
+  background: #fff;
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-weight: 400;
+  padding: 5px 20px;
+  transition: 0.5s;
+  margin-top: 15px;
+  border-radius: 16px;
+  margin-bottom: -10px;
+}
+
+.home-link:hover {
+  background: var(--clr);
+  color: #6c63ff;
+  text-decoration: none;
+  letter-spacing: 0.25em;
+  box-shadow: 0 0 35px var(--clr);
+}
+
+.home-link::before {
+  content: "";
+  text-decoration: none;
+  position: absolute;
+  background: #27282c;
+  inset: 2px;
+  z-index: 1;
+}
+
+.home-link span {
+  position: relative;
+  z-index: 1;
+}
+
+.home-link i::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 80%;
+  width: 10px;
+  height: 4px;
+  background: #27282c;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.home-link:hover i::before {
+  width: 20px;
+  left: 20%;
+}
+
+.home-link i::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 10px;
+  height: 4px;
+  background: #27282c;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.home-link:hover i::after {
+  width: 20px;
+  left: 80%;
 }
 
 h1 {
   font-size: 96px;
+  padding: 0;
 }
 
 h1,
@@ -24,25 +98,17 @@ h3 {
 h3 {
   font-size: 24px;
   opacity: 0.7;
-}
-
-.about-paragraphs {
-  display: flex;
-  margin: 10px;
-}
-
-p {
-  background: var(--secondary-color);
-  padding: 20px;
-  border-radius: 4px;
-  font-size: 18px;
-  line-height: 1.5;
-  text-align: center;
-  margin-left: 5px;
+  margin-top: -20px;
 }
 
 .paragraph-2 {
-  margin-left: 20px;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: #53acb4;
+  color: black;
+  padding: 30px;
+  border-radius: 25px;
 }
 
 .email-link {
