--- a/style/about.css
+++ b/style/about.css
@@ -119,6 +119,53 @@ h3 {
   margin-top: -20px;
 }
 
+h4 {
+  font-size: 45px;
+}
+
+.inner-heading {
+  border: 0px solid #ddd;
+  height: 50px;
+  line-height: 50px;
+  font-size: 45px;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+.inner-heading span {
+  position: relative;
+  color: #74c0fc;
+  animation: animation 10s ease infinite;
+}
+
+@keyframes animation {
+  0%,
+  100% {
+    top: 0;
+  }
+  20% {
+    top: 0;
+  }
+  25% {
+    top: -50px;
+  }
+  45% {
+    top: -50px;
+  }
+  50% {
+    top: -100px;
+  }
+  70% {
+    top: -100px;
+  }
+  75% {
+    top: -150px;
+  }
+  95% {
+    top: -150px;
+  }
+}
+
 .paragraphs {
   margin: 60px 0 40px 100px;
 }
